--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Build using Python ${{ matrix.python-version }}
         uses: actions/setup-python@v2
         with:
-          python-version: ${{ matrxi.python-version }}
+          python-version: ${{ matrix.python-version }}
       
       - name: install dependencies [pip]
         run:
