--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,7 +16,7 @@ jobs:
           python-version: ${{ matrix.python-version }}
       
       - name: install dependencies [pip]
-        run:
+        run: |
           python -m pip install pip --upgrade pip
           pip install flake8
           if [ -f requirements-dev.txt ]; then pip install -r requirements-dev.txt; fi
