--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,6 @@
 name: Build and Test [Python 3.6, 3.7, 3.8, 3.9]
 
-on: push
+on: [push]
 
 jobs:
   build:
@@ -23,7 +23,9 @@ jobs:
           pip install -e .
       
       - name: run linter [flake8]
-        run: flake8 .
+        run: |
+          flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
+          flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
       
       - name: run unit tests [pytest]
         run: pytest
