--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,3 +29,8 @@ jobs:
       
       - name: run unit tests [pytest]
         run: pytest
+
+      - name: generate report
+        run: coverage run -m pytest
+      - name: upload coverage to codecov
+        uses: codecov/codecov-action@v1
