--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -31,7 +31,15 @@ jobs:
         run: pytest
 
       - name: generate report
-        run: coverage run -m pytest
+        run: pytest --cov=./ --cov-report=xml
 
       - name: upload coverage to codecov
         uses: codecov/codecov-action@v1
+        with:
+          files: ./coverage1.xml,./coverage2.xml
+          directory: ./coverage/reports/
+          flags: unittests
+          name: codecov-umbrella
+          fail_ci_if_error: true
+          path_to_write_report: ./coverage/codecov_report.txt
+          verbose: true
