--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,8 @@ jobs:
       - name: upload coverage to codecov
         uses: codecov/codecov-action@v1
         with:
-          files: ./coverage1.xml,./coverage2.xml
-          directory: ./coverage/reports/
+          files: ./coverage.xml
           flags: unittests
           name: codecov-umbrella
           fail_ci_if_error: true
-          path_to_write_report: ./coverage/codecov_report.txt
           verbose: true
